# lofi

./: .bazelignore  .bazelrc  .envrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  flake.nix  report.md
.claude/: current-plan.md
.claude/agents/: architect.md  coder.md  reviewer.md  technical-writer.md  test-writer.md
.claude/commands/: orchestrate.md
app/: BUILD.bazel  Cargo.toml  README.md
app/core/: .gitignore  BUILD.bazel  Cargo.toml  README.md  build.rs  cbindgen.toml
app/core/src/: commands.rs  lib.rs  matcher.rs  mru.rs
app/core/src/ffi/: entries.rs  mod.rs  mru.rs
app/core/tests/: ffi.rs  mru.rs
app/gnome/: Cargo.toml  README.md
app/gnome/src/: apps.rs  commands.rs  launch.rs  lib.rs  main.rs  power.rs  ui.rs  windows.rs  workspaces.rs
app/gnome/tests/: apps.rs
app/macos/: .gitignore  BUILD.bazel  README.md  build.sh  check.sh  project.yml  run.sh
app/macos/Resources/: Info.plist  LoFi.entitlements
app/macos/Sources/LoFi/: AppDelegate.swift  AppDiscovery.swift  AppListController.swift  Hotkey.swift  LoFi-Bridging-Header.h  PanelController.swift  Permissions.swift  PowerCommands.swift  RustBridge.swift  SavedFrameStore.swift  WindowActivation.swift  WindowCommands.swift  WindowControl.swift  WindowDiscovery.swift  main.swift
app/macos/bazel/: activate.sh  build.sh  close.sh  install.sh  launch.sh  swift_format_test.sh
extension/: README.md
extension/gnome/: .gitignore  .prettierignore  README.md  build.sh  dbus-interface.xml  eslint.config.js  metadata.json  package-lock.json  package.json  tsconfig.json
extension/gnome/src/: dbus-xml.d.ts  displays.ts  errors.ts  extension.ts  launcher.ts  service.ts  windows.ts  workspaces.ts
nix/: hm-module.nix
