module(
    name = "lofi",
    version = "0.1.0",
)

# Current BCR versions as of May 2026, pinned exactly. The rule stack
# tracks Bazel 8.x LTS; rules_apple 4.5.3 confirms 7/8/9 LTS support, so
# matching the .bazelversion (8.4.2) is the well-tested path.
#
# Declaration order matters: apple_support MUST come above rules_cc so
# Bazel registers the Apple CC toolchain before the generic one;
# otherwise rules_swift picks up the default "local" target triple and
# bails. See https://github.com/bazelbuild/apple_support readme.
bazel_dep(name = "apple_support", version = "2.5.4", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_swift", version = "3.6.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "4.5.3", repo_name = "build_bazel_rules_apple")

# crate_universe consumes the Cargo lockfile so every transitive Rust
# dep — serde, rusqlite (bundled SQLite), fuzzy-matcher, cbindgen as a
# tool binary — becomes a Bazel target under `@crates//:...`. Cargo
# stays the source of truth for Rust dependency versions; the Bazel
# build reads the same `Cargo.lock` the Crane-driven Linux build does.
#
# Note: only `core` is listed as a manifest. The `gnome` crate compiles
# only on Linux against gtk4/libadwaita, which Bazel on Darwin cannot
# satisfy. Linux continues to build it via the existing Crane path in
# `flake.nix`. If a future slice needs gnome under Bazel, add its
# manifest here and gate the relevant targets with a Linux constraint.
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//app:Cargo.lock",
    manifests = ["//app:Cargo.toml"],
)

# `cbindgen` is consumed by `//app/core` as a build tool (it parses the
# Rust source and emits `lofi_core.h`). crate_universe needs to be told
# to expose the binary target, otherwise only the library target is
# generated.
crate.annotation(
    crate = "cbindgen",
    gen_binaries = ["cbindgen"],
)

use_repo(crate, "crates")

# Register the Apple CC toolchain. Without this rules_swift falls back
# to the default "local" CC toolchain, which has target triple "local"
# (not a real Apple triple), and the Swift toolchain rejects it. The
# `apple_cc_configure_extension` autodetects the user's installed Xcode.
apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")
