# Bazel build for the macOS frontend.
#
# Two layers:
#
#   :LoFiLib       swift_library compiling Sources/LoFi/*.swift; depends
#                  on the Clang module exposed by //app/core:lofi_core_cc
#                  so Swift can `import LoFiCore`.
#
#   :LoFi          macos_application bundling the swift_library together
#                  with Info.plist + entitlements into LoFi.app.
#
# `:launch` is a tiny sh_binary that opens the built bundle so
# `bazel run //app/macos:launch` is a one-step dev cycle.

load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcodeproj")

swift_library(
    name = "LoFiLib",
    module_name = "LoFi",
    srcs = glob(["Sources/LoFi/*.swift"]),
    deps = ["//app/core:lofi_core_cc"],
)

macos_application(
    name = "LoFi",
    bundle_id = "dev.jplein.lofi",
    bundle_name = "LoFi",
    infoplists = ["Resources/Info.plist"],
    entitlements = "Resources/LoFi.entitlements",
    minimum_os_version = "15.0",
    # Public so rules_xcodeproj's generated package can depend on this
    # for project generation.
    visibility = ["//visibility:public"],
    deps = [":LoFiLib"],
)

sh_binary(
    name = "launch",
    srcs = ["bazel/launch.sh"],
    data = [":LoFi"],
)

# Quit any running LoFi.app. Tries a graceful AppleScript quit first,
# falls back to SIGTERM. Safely no-ops when no instance is running.
sh_binary(
    name = "close",
    srcs = ["bazel/close.sh"],
)

# Send a re-open event (Launch Services equivalent of a Dock click) to
# an already-running LoFi.app. Prints a hint and exits when no instance
# is running — use `:launch` to start one. The intended caller is a
# global keyboard shortcut once the hotkey slice lands; until then it's
# a manual dev tool.
sh_binary(
    name = "activate",
    srcs = ["bazel/activate.sh"],
)

# Generates `LoFi.xcodeproj` from the Bazel graph so the app can be
# opened, built, and debugged in Xcode. The project is generated on
# demand — `bazel run //app/macos:xcodeproj` writes it to
# `app/macos/LoFi.xcodeproj/`; the rendered project file is gitignored
# so the YAML/Bazel files stay the source of truth.
xcodeproj(
    name = "xcodeproj",
    project_name = "LoFi",
    tags = ["manual"],
    top_level_targets = [":LoFi"],
)
